@@ -29,3 +29,13 @@ java -XX:+UseG1GC -Xms16m -Xmx64m -Xlog:gc GcObserve
 Evidence:
 The log began with "Using G1" and showed G1 evacuation pauses.
 The collector flag selects G1; it does not guarantee a particular pause time.
+
+Exercise 5 
+
+Command:
+java -XX:+UseZGC -Xms16m -Xmx64m -Xlog:gc GcObserve
+
+Evidence:
+The log began with "Using The Z Garbage Collector" instead of "Using G1".
+Pause-related log lines look different — ZGC does most of its work concurrently,
+so it does not report the same kind of stop-the-world "Evacuation Pause" G1 does.
